--- a/stureports/think-java/gaberoessler.think-java_results.html
+++ b/stureports/think-java/gaberoessler.think-java_results.html
@@ -71,8 +71,8 @@ How many seconds? 13 seconds = 0 hours, 0 minutes, and 0 seconds
 I'm thinking of a number between 1 and 100, inclusive.
 	Can you guess what it is?
 	Type your guess: Your guess is: 13
-	The number I was thinking of was: 87
-	You were off by: 74
+	The number I was thinking of was: 9
+	You were off by: 4
 	
 <--
 	[OUTPUT OK]
@@ -183,12 +183,12 @@ The result is 5.0
 <hr>
 
 <b>[Assignment]  > Think Java: Ch12< </b>
-  [DESC] HW11: Poker Hand Test
+  [DESC] HW12: Poker Hand Test
 
-*[BEGIN ch12]
+*[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch12
-[DONE ch12]
+	[ERROR] No chapter work for:chapter12
+[DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
