--- a/stureports/think-java/maxckaeh.think-java_results.html
+++ b/stureports/think-java/maxckaeh.think-java_results.html
@@ -66,8 +66,8 @@ Total number of seconds: 13 seconds = 0 hours, 0 minutes, and 13 seconds.
 -->
 I'm thinking of a number between 0 and 100 (including both). Can you guess what it is? 
 	Your guess is: 13
-	The number I was thinking of is: 59
-	You were off by: -46
+	The number I was thinking of is: 61
+	You were off by: -48
 	
 <--
 	[OUTPUT OK]
@@ -290,12 +290,12 @@ I'm thinking of a number between 0 and 100 (including both). Can you guess what 
 <hr>
 
 <b>[Assignment]  > Think Java: Ch12< </b>
-  [DESC] HW11: Poker Hand Test
+  [DESC] HW12: Poker Hand Test
 
-*[BEGIN ch12]
+*[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch12
-[DONE ch12]
+	[ERROR] No chapter work for:chapter12
+[DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
