--- a/stureports/think-java/tpipitone.think-java_results.html
+++ b/stureports/think-java/tpipitone.think-java_results.html
@@ -69,7 +69,7 @@ How many seconds? 13 seconds is equal to 0 hours, 0 minutes, 13 seconds.
 -->
 Guess my number between 1 and 100!
 	Type a number: Your guess is: 13
-	My number was 10. You were off by 3.
+	My number was 3. You were off by 10.
 	
 <--
 	[OUTPUT OK]
@@ -399,12 +399,12 @@ Ch 4 Multadd
 <hr>
 
 <b>[Assignment]  > Think Java: Ch12< </b>
-  [DESC] HW11: Poker Hand Test
+  [DESC] HW12: Poker Hand Test
 
-*[BEGIN ch12]
+*[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch12
-[DONE ch12]
+	[ERROR] No chapter work for:chapter12
+[DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
