--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -43,8 +43,8 @@ How many seconds?: 0 hours, 0 minutes, 13 seconds.
 [RUNNING] Exercise4
 -->
 What do you think my number is?: Your number was: 13
-	My number was: 90
-	You were off by: 77
+	My number was: 39
+	You were off by: 26
 	
 <--
 	[OUTPUT OK]
@@ -153,12 +153,12 @@ Ch6Ex4.java:56: error: cannot find symbol
 <hr>
 
 <b>[Assignment]  > Think Java: Ch12< </b>
-  [DESC] HW11: Poker Hand Test
+  [DESC] HW12: Poker Hand Test
 
-*[BEGIN ch12]
+*[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-	[ERROR] No chapter work for:ch12
-[DONE ch12]
+	[ERROR] No chapter work for:chapter12
+[DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
 <b>          [SCORE] 0.25</b>
 
