--- a/stureports/think-java/Marcus620.think-java_results.html
+++ b/stureports/think-java/Marcus620.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-12-02
+Run date: 2018-12-04
 <br>Student User: Marcus620
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-12-02
 [PRE-WARN]: Expected non-empty: ./stuwork/Marcus620/think-java-Marcus620
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Marcus620.git]
-Cloning into 'think-java-Marcus620'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,48 +19,20 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[ERROR] javac failed Date.java Date.java:1: error: class date is public, should be declared in a file named date.java
-	public class date {
-	       ^
-	1 error
-	
-[COMPILING] Time.java
-	[ERROR] javac failed Time.java Time.java:1: error: class time is public, should be declared in a file named time.java
-	public class time{
-	       ^
-	1 error
-	
-[SUMMARY] 
-	['Date: COMPILE ERROR (- 0.10)'
-	 'Time: COMPILE ERROR (- 0.10)']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[SUMMARY] 
-	['Exercise3: MISSING (- 0.17)'
-	 'Exercise4: MISSING (- 0.17)']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-10.0
-	1.0606601717798212
-	5.298317366548037
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Multadd: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.47</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -96,12 +65,10 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[SUMMARY] 
-	['Exercise3: MISSING (- 0.50)'
-	 'Exercise4: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -110,13 +77,10 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[SUMMARY] 
-	['Exercise5: MISSING (- 0.50)'
-	 'Exercise6: MISSING (- 0.50)'
-	 'Exercise8: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -125,11 +89,10 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter11]
   [EXPECTING TARGETS] ['Tile']
-[SUMMARY] 
-	['Tile: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter11
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -138,34 +101,9 @@ Cloning into 'think-java-Marcus620'...
 
 *[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-[COMPILING] CheckPokerHands.java
-	[SUCCESSFUL COMPILE] CheckPokerHands.java
-[TESTING WITH] TestCheckPokerHands
-[COMPILING] TestCheckPokerHands.java
-	[ERROR] javac failed TestCheckPokerHands.java
- ----begin compile output------- 
-TestCheckPokerHands.java:174: error: cannot find symbol
-	                addResult("isHighCard", Arrays.toString(hand), String.valueOf(resultCard.getRank()), 
-	                                                                                        ^
-	  symbol:   method getRank()
-	  location: variable resultCard of type Card
-	TestCheckPokerHands.java:175: error: cannot find symbol
-	                    String.valueOf(expectedRank), resultCard.getRank() == expectedRank);            
-	                                                            ^
-	  symbol:   method getRank()
-	  location: variable resultCard of type Card
-	TestCheckPokerHands.java:176: error: cannot find symbol
-	                if(resultCard.getRank() != expectedRank){
-	                             ^
-	  symbol:   method getRank()
-	  location: variable resultCard of type Card
-	3 errors
-	
------------END COMPILE-------
-[SUMMARY] 
-	['CheckPokerHands: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter12
 [DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
