--- a/stureports/think-java/banjojeebus.think-java_results.html
+++ b/stureports/think-java/banjojeebus.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-12-02
+Run date: 2018-12-04
 <br>Student User: banjojeebus
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-12-02
 [PRE-WARN]: Expected non-empty: ./stuwork/banjojeebus/think-java-banjojeebus
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-banjojeebus.git]
-Cloning into 'think-java-banjojeebus'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,29 +19,7 @@ Cloning into 'think-java-banjojeebus'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-American Format: Tuesday,August 28,2018
-	European format: Tuesday 28 August 2018
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Seconds remaining: 39870
-	Percent of day passed: 53.854168
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: PASSED - EXCELLENT!'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
@@ -54,17 +29,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[ERROR] javac failed Multadd.java Multadd.java:10: error: ';' expected
-			double sqrtOfx
-			              ^
-	1 error
-	
-[SUMMARY] 
-	['Multadd: COMPILE ERROR (- 0.10)']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.15</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -73,12 +41,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[SUMMARY] 
-	['Exercise4: MISSING (- 0.50)'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -87,11 +53,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[SUMMARY] 
-	['Swettercise1: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -100,33 +65,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[COMPILING] Exercise3.java
-	[ERROR] javac failed Exercise3.java Exercise3.java:6: error: cannot find symbol
-			for(i = 0; i < array.length(); i ++){
-			    ^
-	  symbol:   variable i
-	  location: class Exercise3
-	Exercise3.java:6: error: cannot find symbol
-			for(i = 0; i < array.length(); i ++){
-			           ^
-	  symbol:   variable i
-	  location: class Exercise3
-	Exercise3.java:6: error: int cannot be dereferenced
-			for(i = 0; i < array.length(); i ++){
-			                    ^
-	Exercise3.java:6: error: cannot find symbol
-			for(i = 0; i < array.length(); i ++){
-			                               ^
-	  symbol:   variable i
-	  location: class Exercise3
-	4 errors
-	
-[SUMMARY] 
-	['Exercise3: COMPILE ERROR (- 0.30)'
-	 'Exercise4: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -135,13 +77,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[SUMMARY] 
-	['Exercise5: MISSING (- 0.50)'
-	 'Exercise6: MISSING (- 0.50)'
-	 'Exercise8: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -150,11 +89,10 @@ Seconds remaining: 39870
 
 *[BEGIN chapter11]
   [EXPECTING TARGETS] ['Tile']
-[SUMMARY] 
-	['Tile: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter11
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -163,19 +101,9 @@ Seconds remaining: 39870
 
 *[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-[COMPILING] CheckPokerHands.java
-	[ERROR] javac failed CheckPokerHands.java CheckPokerHands.java:6: error: <identifier> expected
-	    System.out.print(theDeck);
-	                    ^
-	CheckPokerHands.java:6: error: <identifier> expected
-	    System.out.print(theDeck);
-	                            ^
-	2 errors
-	
-[SUMMARY] 
-	['CheckPokerHands: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter12
 [DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
