--- a/stureports/think-java/Jake4902.think-java_results.html
+++ b/stureports/think-java/Jake4902.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-12-02
+Run date: 2018-12-04
 <br>Student User: Jake4902
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-12-02
 [PRE-WARN]: Expected non-empty: ./stuwork/Jake4902/think-java-Jake4902
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-Jake4902.git]
-Cloning into 'think-java-Jake4902'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,64 +19,20 @@ Cloning into 'think-java-Jake4902'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-The current time is 19.0:39.0Seconds since midnight: 70740.0Seconds remaining in day19260.0percentage of day that has passed: 0.81875Time elapsed: 0.0-8.0
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: MISSING (- 0.17)'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-Enter seconds: 
-	13 seconds = 0 hours, 0 minutes, and 13 seconds.
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-I'm thinking of a number between 1 and 100
-	(including both). Can you guess what it is?
-	Type a number: Your guess is: 13
-	The number I was thinking of is: 14
-	You were off by: 100
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Exercise3: PASSED - EXCELLENT!'
-	 'Exercise4: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-Multadd Trig = 1.0606601717798212
-	expSum(4) = 1.0640624148157594
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Multadd: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] <font color="green">0.83</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -88,93 +41,10 @@ Multadd Trig = 1.0606601717798212
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[SUCCESSFUL COMPILE] Ch6Ex4.java
-[RUNNING] Ch6Ex4
--->
-Is Abecedarian
-	Is Abecedarian
-	Not Abecedarian
-	Is Abecedarian
-	Is Abecedarian
-	Is Abecedarian
-	Not Abecedarian
-	
-	<br>Results for Exercise4.isAbecedarian()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise5.java
-	[ERROR] javac failed Exercise5.java Exercise5.java:1: error: class, interface, or enum expected
-	<<<<<<< HEAD
-	^
-	Exercise5.java:1: error: class, interface, or enum expected
-	<<<<<<< HEAD
-	  ^
-	Exercise5.java:1: error: class, interface, or enum expected
-	<<<<<<< HEAD
-	    ^
-	Exercise5.java:1: error: class, interface, or enum expected
-	<<<<<<< HEAD
-	      ^
-	Exercise5.java:1: error: class, interface, or enum expected
-	<<<<<<< HEAD
-	        ^
-	Exercise5.java:37: error: illegal start of type
-	=======
-	^
-	Exercise5.java:37: error: ';' expected
-	=======
-	  ^
-	Exercise5.java:37: error: illegal start of type
-	=======
-	    ^
-	Exercise5.java:37: error: <identifier> expected
-	=======
-	      ^
-	Exercise5.java:37: error: ';' expected
-	=======
-	       ^
-	Exercise5.java:38: error: <identifier> expected
-	import java.util.Scanner;
-	                        ^
-	Exercise5.java:75: error: illegal start of type
-	>>>>>>> f5ec23d54e240f9fa51d6505844ed0963ecf0248
-	^
-	Exercise5.java:75: error: ';' expected
-	>>>>>>> f5ec23d54e240f9fa51d6505844ed0963ecf0248
-	   ^
-	Exercise5.java:75: error: illegal start of type
-	>>>>>>> f5ec23d54e240f9fa51d6505844ed0963ecf0248
-	      ^
-	Exercise5.java:75: error: ';' expected
-	>>>>>>> f5ec23d54e240f9fa51d6505844ed0963ecf0248
-	                                                ^
-	Exercise5.java:76: error: reached end of file while parsing
-	}
-	 ^
-	16 errors
-	
-[SUMMARY] 
-	['Exercise4: PASSED - EXCELLENT!'
-	 'Exercise5: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -183,47 +53,10 @@ Is Abecedarian
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[COMPILING] Swettercise1.java
-	[SUCCESSFUL COMPILE] Swettercise1.java
-[TESTING WITH] SwetterciseTest
-[COMPILING] SwetterciseTest.java
-	[SUCCESSFUL COMPILE] SwetterciseTest.java
-[RUNNING] SwetterciseTest
--->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">12, 6, 3, 10, 5, 16, 8, 4, 2, 1, </td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">4, 2, 1, </td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1, </td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.05]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Swettercise1: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] <font color="green">0.95</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -232,51 +65,10 @@ Is Abecedarian
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[TESTING WITH] TestCh7Ex3
-[COMPILING] TestCh7Ex3.java
-	[SUCCESSFUL COMPILE] TestCh7Ex3.java
-[RUNNING] TestCh7Ex3
--->
-
-	<br>Chapter7, Exercise3.indexOfMax()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.indexOfMax("[33, 12, 1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[98, 12, 99]")  </td><td align="left">2</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[99, 100, 98, 5, 4, 3, 2, 1]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[100000, 100, 98, 5, 4, 3, 2, 1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, 1, 2, 3, 4, 5]")  </td><td align="left">5</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, 4, 3, 5, 2, 7]")  </td><td align="left">5</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[-5, 0]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.indexOfMax("[0, -1]")  </td><td align="left">0</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] TestCh7Ex4
-[COMPILING] TestCh7Ex4.java
-	[ERROR] javac failed TestCh7Ex4.java
- ----begin compile output------- 
-TestCh7Ex4.java:47: error: method sieve in class Exercise4 cannot be applied to given types;
-	            boolean[] gotBack = Exercise4.sieve(n);
-	                                         ^
-	  required: int,int[]
-	  found: int
-	  reason: actual and formal argument lists differ in length
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] 
-	['Exercise3: PASSED - EXCELLENT!'
-	 'Exercise4: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -285,72 +77,10 @@ TestCh7Ex4.java:47: error: method sieve in class Exercise4 cannot be applied to 
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[COMPILING] Exercise5.java
-	[SUCCESSFUL COMPILE] Exercise5.java
-[TESTING WITH] TestCh7Ex5
-[COMPILING] TestCh7Ex5.java
-	[SUCCESSFUL COMPILE] TestCh7Ex5.java
-[RUNNING] TestCh7Ex5
--->
-
-	<br>Chapter7, Exercise5.areFactors()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise6.java
-	[SUCCESSFUL COMPILE] Exercise6.java
-[TESTING WITH] TestCh7Ex6
-[COMPILING] TestCh7Ex6.java
-	[SUCCESSFUL COMPILE] TestCh7Ex6.java
-[RUNNING] TestCh7Ex6
--->
-
-	<br>Chapter7, Exercise6.arePrimeFactors()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [2, 2, 2]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("15, [3, 5]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("35, [5, 7, 1]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("30, [2, 3, 5]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("31, [2, 3, 5]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("2431, [11, 13, 17]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.15]
-	
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise8.java
-	[SUCCESSFUL COMPILE] Exercise8.java
-[TESTING WITH] TestCh7Ex8
-[COMPILING] TestCh7Ex8.java
-	[ERROR] javac failed TestCh7Ex8.java
- ----begin compile output------- 
-TestCh7Ex8.java:68: error: cannot find symbol
-	            boolean gotBack = Exercise8.isAnagram(s1, s2);
-	                                       ^
-	  symbol:   method isAnagram(String,String)
-	  location: class Exercise8
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] 
-	['Exercise5: PASSED - EXCELLENT!'
-	 'Exercise6: PASSED - BUT TEST CASES FOUND SOME ERRORS'
-	 'Exercise8: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.55</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
