--- a/stureports/think-java/MegaMichael1000.think-java_results.html
+++ b/stureports/think-java/MegaMichael1000.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-12-02
+Run date: 2018-12-04
 <br>Student User: MegaMichael1000
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-12-02
 [PRE-WARN]: Expected non-empty: ./stuwork/MegaMichael1000/think-java-MegaMichael1000
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-MegaMichael1000.git]
-Cloning into 'think-java-MegaMichael1000'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,80 +19,20 @@ Cloning into 'think-java-MegaMichael1000'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Thursday, August 28, 2018
-	Thursday August 28 2018
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Seconds since midnight: 44520.0
-	Seconds remaining in day: 41880.0
-	Percentage of day: 48.47222
-	Time elapsed: 1810.0
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: PASSED - EXCELLENT!'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-Enter the amount of seconds: 13 seconds = 0 hours, 0 minutes, 13 seconds.
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-I'm thinking of a number between 1 and 100
-	(including both). Can you guess what it is?
-	Type a number: Your guess is: 13
-	The number I was thinking of is: 9
-	You were off by: 4
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Exercise3: PASSED - EXCELLENT!'
-	 'Exercise4: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-5.0
-	1.0606601717798212
-	1.1241498650869424
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Multadd: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -104,12 +41,10 @@ I'm thinking of a number between 1 and 100
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[SUMMARY] 
-	['Exercise4: MISSING (- 0.50)'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -118,47 +53,10 @@ I'm thinking of a number between 1 and 100
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[COMPILING] Swettercise1.java
-	[SUCCESSFUL COMPILE] Swettercise1.java
-[TESTING WITH] SwetterciseTest
-[COMPILING] SwetterciseTest.java
-	[SUCCESSFUL COMPILE] SwetterciseTest.java
-[RUNNING] SwetterciseTest
--->
-
-	<br>Results for reverseStr()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">reverseStr("I haz win?")  </td><td align="left">?niw zah I</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("007 bond james")  </td><td align="left">semaj dnob 700</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("banannas")  </td><td align="left">sannanab</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">reverseStr("tacocat")  </td><td align="left">tacocat</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for collatzThis()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">collatzThis("12")  </td><td align="left">12, 6, 3, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("4")  </td><td align="left">4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">collatzThis("11")  </td><td align="left">11, 34, 17, 52, 26, 13, 40, 20, 10, 5, 16, 8, 4, 2, 1</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Results for isPrime()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isPrime("12")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("4")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("7")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("13")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("15")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("2048")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isPrime("1031")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Swettercise1: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -167,12 +65,10 @@ I'm thinking of a number between 1 and 100
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[SUMMARY] 
-	['Exercise3: MISSING (- 0.50)'
-	 'Exercise4: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.00</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -181,82 +77,10 @@ I'm thinking of a number between 1 and 100
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[COMPILING] Exercise5.java
-	[SUCCESSFUL COMPILE] Exercise5.java
-[TESTING WITH] TestCh7Ex5
-[COMPILING] TestCh7Ex5.java
-	[SUCCESSFUL COMPILE] TestCh7Ex5.java
-[RUNNING] TestCh7Ex5
--->
-
-	<br>Chapter7, Exercise5.areFactors()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.areFactors("8, [4, 2, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("13, [1, 12, 99]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("26, [13, 26, 1]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("35, [5, 7, 34]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.areFactors("12, [1, 12, 4, 6, 2, 3]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise6.java
-	[SUCCESSFUL COMPILE] Exercise6.java
-[TESTING WITH] TestCh7Ex6
-[COMPILING] TestCh7Ex6.java
-	[SUCCESSFUL COMPILE] TestCh7Ex6.java
-[RUNNING] TestCh7Ex6
--->
-
-	<br>Chapter7, Exercise6.arePrimeFactors()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [4, 2, 1]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("8, [2, 2, 2]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("15, [3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("35, [5, 7, 1]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("30, [2, 3, 5]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("31, [2, 3, 5]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise6.arePrimeFactors("2431, [11, 13, 17]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.03]
-	
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise8.java
-	[SUCCESSFUL COMPILE] Exercise8.java
-[TESTING WITH] TestCh7Ex8
-[COMPILING] TestCh7Ex8.java
-	[SUCCESSFUL COMPILE] TestCh7Ex8.java
-[RUNNING] TestCh7Ex8
--->
-
-	<br>Chapter7, Exercise8.isAnagram()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise8.isAnagram("stop, mots")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("stop, pots")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("allen downey, well annoyed")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("flip, flop")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("ooooooh boy, oooooo hboy")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("oooooo hboy, ooooooh boy")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("now, won")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise8.isAnagram("larp test, lightning bolt")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Exercise5: PASSED - EXCELLENT!'
-	 'Exercise6: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.'
-	 'Exercise8: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] <font color="green">0.97</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -265,11 +89,10 @@ I'm thinking of a number between 1 and 100
 
 *[BEGIN chapter11]
   [EXPECTING TARGETS] ['Tile']
-[SUMMARY] 
-	['Tile: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter11
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -278,54 +101,9 @@ I'm thinking of a number between 1 and 100
 
 *[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-[COMPILING] CheckPokerHands.java
-	[SUCCESSFUL COMPILE] CheckPokerHands.java
-[TESTING WITH] TestCheckPokerHands
-[COMPILING] TestCheckPokerHands.java
-	[SUCCESSFUL COMPILE] TestCheckPokerHands.java
-[RUNNING] TestCheckPokerHands
--->
-
-	<br>Chapter12, Test Royal Flush
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isRoyalFlush("[Ace of Hearts, King of Hearts, Queen of Hearts, Jack of Hearts, 10 of Hearts]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isRoyalFlush("[Ace of Hearts, King of Hearts, Queen of Hearts, Jack of Hearts, 10 of Hearts]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isRoyalFlush("[Queen of Hearts, Queen of Clubs, Ace of Hearts, King of Hearts, 10 of Hearts]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test Straight Flush
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isStraightFlush("[10 of Diamonds, Jack of Diamonds, Queen of Diamonds, King of Diamonds, Ace of Diamonds]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isStraightFlush("[10 of Diamonds, Jack of Diamonds, Queen of Diamonds, King of Diamonds, Ace of Diamonds]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isStraightFlush("[3 of Diamonds, 4 of Diamonds, 5 of Diamonds, 6 of Diamonds, 10 of Diamonds]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isStraightFlush("[3 of Diamonds, 4 of Diamonds, 5 of Diamonds, 6 of Diamonds, 7 of Diamonds]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test Flush
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isFlush("[Ace of Clubs, King of Clubs, Queen of Clubs, Jack of Clubs, 10 of Clubs]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isFlush("[Queen of Clubs, Jack of Clubs, Ace of Clubs, King of Clubs, 10 of Clubs]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isFlush("[3 of Clubs, 4 of Clubs, 5 of Clubs, 6 of Clubs, 10 of Clubs]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isFlush("[3 of Clubs, 4 of Clubs, 10 of Clubs, 6 of Clubs, 6 of Clubs]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isFlush("[3 of Clubs, 4 of Hearts, 10 of Clubs, 6 of Clubs, 6 of Clubs]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test Full House
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isFullHouse("[Ace of Clubs, Ace of Diamonds, Queen of Clubs, Queen of Diamonds, Queen of Hearts]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isFullHouse("[Ace of Clubs, King of Diamonds, Queen of Clubs, Queen of Diamonds, Queen of Hearts]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test High Card
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isHighCard("[Ace of Clubs, Ace of Diamonds, Queen of Clubs, Queen of Diamonds, Queen of Hearts]")  </td><td align="left">1</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isHighCard("[3 of Diamonds, 3 of Hearts, 2 of Hearts, 2 of Clubs, 2 of Diamonds]")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['CheckPokerHands: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter12
 [DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
