--- a/stureports/think-java/bealarson82.think-java_results.html
+++ b/stureports/think-java/bealarson82.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-12-02
+Run date: 2018-12-04
 <br>Student User: bealarson82
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-12-02
 [PRE-WARN]: Expected non-empty: ./stuwork/bealarson82/think-java-bealarson82
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-bealarson82.git]
-Cloning into 'think-java-bealarson82'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,76 +19,20 @@ Cloning into 'think-java-bealarson82'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[COMPILING] Date.java
-	[SUCCESSFUL COMPILE] Date.java
-[RUNNING] Date
--->
-Hello World!
-	Day: tuesday
-	Date: 28
-	Month: august
-	Year: 2018
-	American Style: 
-	tuesday, august 28, 2018
-	European Style: 
-	tuesday 28 august 2018
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Time.java
-	[SUCCESSFUL COMPILE] Time.java
-[RUNNING] Time
--->
-Number of seconds since midnight: 
-	16259
-	Number of seconds remaining in the day: 
-	70141.0
-	Percentage of the day that has passed: 
-	18.818287%
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Date: PASSED - EXCELLENT!'
-	 'Time: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[ERROR] javac failed Exercise3.java Exercise3.java:1: error: class, interface, or enum expected
-	pimport java.util.Scanner;
-	^
-	1 error
-	
-[COMPILING] Exercise4.java
-	[ERROR] javac failed Exercise4.java Exercise4.java:15: error: cannot find symbol
-			guess = sc.nextInt();
-			        ^
-	  symbol:   variable sc
-	  location: class Exercise4
-	1 error
-	
-[SUMMARY] 
-	['Exercise3: COMPILE ERROR (- 0.10)'
-	 'Exercise4: COMPILE ERROR (- 0.10)']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-	[ERROR] Runtime Error @ java Multadd
-
-[SUMMARY] 
-	['Multadd: RUNTIME ERROR (- 0.08)']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.72</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -100,59 +41,10 @@ Number of seconds since midnight:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[SUCCESSFUL COMPILE] Ch6Ex4.java
-[RUNNING] Ch6Ex4
--->
-
-	<br>Results for Exercise4.isAbecedarian()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise4.isAbecedarian("abcdef")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("aaaaaa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("gfedcba")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("z")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("beknow")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("no")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise4.isAbecedarian("he")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise5.java
-	[SUCCESSFUL COMPILE] Exercise5.java
-[TESTING WITH] Ch6Ex5
-[COMPILING] Ch6Ex5.java
-	[SUCCESSFUL COMPILE] Ch6Ex5.java
-[RUNNING] Ch6Ex5
--->
-
-	<br>Results for Exercise5().isDoubloon()
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">Exercise5.isDoubloon("abcdef")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aa")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("anna")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("abcdabcd")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("aaa")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("intestines")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("i cook crepes on sundays!")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Exercise5.isDoubloon("Bannab")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	[deductions=0.0]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Exercise4: PASSED - EXCELLENT!'
-	 'Exercise5: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] <font color="green">1.00</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -161,17 +53,10 @@ Number of seconds since midnight:
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[COMPILING] Swettercise1.java
-	[ERROR] javac failed Swettercise1.java Swettercise1.java:64: error: method main(String[]) is already defined in class Swettercise1
-		public static void main(String[] args) {
-		                   ^
-	1 error
-	
-[SUMMARY] 
-	['Swettercise1: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -180,32 +65,10 @@ Number of seconds since midnight:
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']
-[COMPILING] Exercise3.java
-	[ERROR] javac failed Exercise3.java Exercise3.java:5: error: cannot find symbol
-			System.out.println(indexOfMax(someArray));
-			                   ^
-	  symbol:   method indexOfMax(int[])
-	  location: class Exercise3
-	1 error
-	
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] TestCh7Ex4
-[COMPILING] TestCh7Ex4.java
-	[ERROR] javac failed TestCh7Ex4.java
- ----begin compile output------- 
-TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to boolean[]
-	            boolean[] gotBack = Exercise4.sieve(n);
-	                                               ^
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] 
-	['Exercise3: COMPILE ERROR (- 0.30)'
-	 'Exercise4: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt1 
-<b>          [SCORE] 0.40</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -214,50 +77,10 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 
 *[BEGIN chapter7]
   [EXPECTING TARGETS] ['Exercise5', 'Exercise6', 'Exercise8']
-[COMPILING] Exercise5.java
-	[ERROR] javac failed Exercise5.java Exercise5.java:5: error: non-static method areFactors(int,int[]) cannot be referenced from a static context
-			System.out.print(areFactors(n,array));
-			                 ^
-	1 error
-	
-[COMPILING] Exercise6.java
-	[ERROR] javac failed Exercise6.java Exercise6.java:7: error: cannot find symbol
-			System.out.print(arePrimeFactors);
-			                 ^
-	  symbol:   variable arePrimeFactors
-	  location: class Exercise6
-	Exercise6.java:24: error: cannot find symbol
-			for(int j = 2; y< w.length; j++){
-			               ^
-	  symbol:   variable y
-	  location: class Exercise6
-	2 errors
-	
-[COMPILING] Exercise8.java
-	[ERROR] javac failed Exercise8.java Exercise8.java:19: error: cannot find symbol
-				Arrays.sort(s1Array);
-				^
-	  symbol:   variable Arrays
-	  location: class Exercise8
-	Exercise8.java:20: error: cannot find symbol
-				Arrays.sort(s2Array);
-				^
-	  symbol:   variable Arrays
-	  location: class Exercise8
-	Exercise8.java:22: error: cannot find symbol
-				status = Arrays.equals(s1Array, s2Array);
-				         ^
-	  symbol:   variable Arrays
-	  location: class Exercise8
-	3 errors
-	
-[SUMMARY] 
-	['Exercise5: COMPILE ERROR (- 0.30)'
-	 'Exercise6: COMPILE ERROR (- 0.30)'
-	 'Exercise8: COMPILE ERROR (- 0.30)']
+	[ERROR] No chapter work for:chapter7
 [DONE chapter7]
 [ASSIGNMENT DONE]  Think Java: Ch7 - pt2 
-<b>          [SCORE] 0.10</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -266,39 +89,10 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 
 *[BEGIN chapter11]
   [EXPECTING TARGETS] ['Tile']
-[COMPILING] Tile.java
-	[SUCCESSFUL COMPILE] Tile.java
-[TESTING WITH] TestTile
-[COMPILING] TestTile.java
-	[SUCCESSFUL COMPILE] TestTile.java
-[RUNNING] TestTile
--->
-
-	<br>Chapter11, Exercise3: Tile Class
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-C ].getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-C ].getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-A ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[8-A ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-Z ].getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-Z ].getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-A ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[8-A ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[10-Z ].toString("")  </td><td align="left">10-Z</td><td bgcolor="red"><b>Z - 10 </b></td></tr>
-	<tr><td align="right" width="200">Tile[3-Z ].equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">Tile[3-Z ].!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
-	[deductions=0.05]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Tile: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
+	[ERROR] No chapter work for:chapter11
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] <font color="green">0.95</font></b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -307,52 +101,9 @@ TestCh7Ex4.java:47: error: incompatible types: boolean cannot be converted to bo
 
 *[BEGIN chapter12]
   [EXPECTING TARGETS] ['CheckPokerHands']
-[COMPILING] CheckPokerHands.java
-	[SUCCESSFUL COMPILE] CheckPokerHands.java
-[TESTING WITH] TestCheckPokerHands
-[COMPILING] TestCheckPokerHands.java
-	[SUCCESSFUL COMPILE] TestCheckPokerHands.java
-[RUNNING] TestCheckPokerHands
--->
-
-	<br>Chapter12, Test Royal Flush
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isRoyalFlush("[Ace of Hearts, King of Hearts, Queen of Hearts, Jack of Hearts, 10 of Hearts]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isRoyalFlush("[Queen of Hearts, Jack of Hearts, Ace of Hearts, King of Hearts, 10 of Hearts]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isRoyalFlush("[Queen of Hearts, Queen of Clubs, Ace of Hearts, King of Hearts, 10 of Hearts]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test Straight Flush
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isStraightFlush("[Ace of Diamonds, King of Diamonds, Queen of Diamonds, Jack of Diamonds, 10 of Diamonds]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isStraightFlush("[Queen of Diamonds, Jack of Diamonds, Ace of Diamonds, King of Diamonds, 10 of Diamonds]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isStraightFlush("[3 of Diamonds, 4 of Diamonds, 5 of Diamonds, 6 of Diamonds, 10 of Diamonds]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isStraightFlush("[3 of Diamonds, 4 of Diamonds, 5 of Diamonds, 6 of Diamonds, 7 of Diamonds]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test Flush
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isFlush("[Ace of Clubs, King of Clubs, Queen of Clubs, Jack of Clubs, 10 of Clubs]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isFlush("[Queen of Clubs, Jack of Clubs, Ace of Clubs, King of Clubs, 10 of Clubs]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isFlush("[3 of Clubs, 4 of Clubs, 5 of Clubs, 6 of Clubs, 10 of Clubs]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isFlush("[3 of Clubs, 4 of Clubs, 10 of Clubs, 6 of Clubs, 6 of Clubs]")  </td><td align="left">false</td><td bgcolor="red"><b>true </b></td></tr>
-	<tr><td align="right" width="200">isFlush("[3 of Clubs, 4 of Hearts, 10 of Clubs, 6 of Clubs, 6 of Clubs]")  </td><td align="left">false</td><td width="50" bgcolor="green"> :) </td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test Full House
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">isFullHouse("[Ace of Clubs, Ace of Diamonds, Queen of Clubs, Queen of Diamonds, Queen of Hearts]")  </td><td align="left">true</td><td width="50" bgcolor="green"> :) </td></tr>
-	<tr><td align="right" width="200">isFullHouse("[Ace of Clubs, King of Diamonds, Queen of Clubs, Queen of Diamonds, Queen of Hearts]")  </td><td align="left">true</td><td bgcolor="red"><b>false </b></td></tr>
-	</table><br>
-	
-	<br>Chapter12, Test High Card
-	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr></table><br>
-	[deductions=0.33]
-	
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['CheckPokerHands: RAN - ERRORS NEED TO BE FIXED. You can to do better! :)']
+	[ERROR] No chapter work for:chapter12
 [DONE chapter12]
 [ASSIGNMENT DONE]  Think Java: Ch12
-<b>          [SCORE] 0.67</b>
+<b>          [SCORE] 0.25</b>
 
 </pre></body></html>
