--- a/stureports/think-java/heypoppins.think-java_results.html
+++ b/stureports/think-java/heypoppins.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-12-02
+Run date: 2018-12-04
 <br>Student User: heypoppins
 <br>Project: think-java
 <br>
@@ -11,9 +11,6 @@ Run date: 2018-12-02
 [PRE-WARN]: Expected non-empty: ./stuwork/heypoppins/think-java-heypoppins
 [GITWORK]
 [Attempting DL:https://github.com/SwettSoquelHS/think-java-heypoppins.git]
-Cloning into 'think-java-heypoppins'...
-	
-[GITWORK DONE]
 
 <hr>
 
@@ -22,56 +19,20 @@ Cloning into 'think-java-heypoppins'...
 
 *[BEGIN chapter2]
   [EXPECTING TARGETS] ['Date', 'Time']]
-[SUMMARY] 
-	['Date: MISSING (- 0.17)'
-	 'Time: MISSING (- 0.17)']
+	[ERROR] No chapter work for:chapter2
 [DONE chapter2]
 
 *[BEGIN chapter3]
   [EXPECTING TARGETS] ['Exercise3', 'Exercise4']]
-[COMPILING] Exercise3.java
-	[SUCCESSFUL COMPILE] Exercise3.java
-[RUNNING] Exercise3
--->
-How many seconds?: 0 hours, 0 minutes, 13 seconds.
-	
-<--
-	[OUTPUT OK]
-
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[RUNNING] Exercise4
--->
-What do you think my number is?: Your number was: 13
-	My number was: 39
-	You were off by: 26
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Exercise3: PASSED - EXCELLENT!'
-	 'Exercise4: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter3
 [DONE chapter3]
 
 *[BEGIN chapter4]
   [EXPECTING TARGETS] ['Multadd']]
-[COMPILING] Multadd.java
-	[SUCCESSFUL COMPILE] Multadd.java
-[RUNNING] Multadd
--->
-multAdd test using 1.0, 2.0, 3.0: 5.0
-	Using multAdd: 1.0606601717798212
-	expSum: 1.2005440615054193
-	
-<--
-	[OUTPUT OK]
-
-[SUMMARY] 
-	['Multadd: PASSED - EXCELLENT!']
+	[ERROR] No chapter work for:chapter4
 [DONE chapter4]
 [ASSIGNMENT DONE] Think Java: Ch2-ch4
-<b>          [SCORE] 0.67</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -80,26 +41,10 @@ multAdd test using 1.0, 2.0, 3.0: 5.0
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Exercise4', 'Exercise5']
-[COMPILING] Exercise4.java
-	[SUCCESSFUL COMPILE] Exercise4.java
-[TESTING WITH] Ch6Ex4
-[COMPILING] Ch6Ex4.java
-	[ERROR] javac failed Ch6Ex4.java
- ----begin compile output------- 
-Ch6Ex4.java:56: error: cannot find symbol
-	            boolean isIt = Exercise4.isAbecedarian(testStr);
-	                                    ^
-	  symbol:   method isAbecedarian(String)
-	  location: class Exercise4
-	1 error
-	
------------END COMPILE-------
-[SUMMARY] 
-	['Exercise4: COMPILE ERROR (- 0.30)'
-	 'Exercise5: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Think Java: Ch6
-<b>          [SCORE] 0.20</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
@@ -108,11 +53,10 @@ Ch6Ex4.java:56: error: cannot find symbol
 
 *[BEGIN chapter6]
   [EXPECTING TARGETS] ['Swettercise1']
-[SUMMARY] 
-	['Swettercise1: MISSING (- 0.50)']
+	[ERROR] No chapter work for:chapter6
 [DONE chapter6]
 [ASSIGNMENT DONE] Swettercise1
-<b>          [SCORE] 0.50</b>
+<b>          [SCORE] 0.25</b>
 
 <hr>
 
